--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-stencil",
-  "homepage": "",
+  "homepage": "https://happyfrog612.github.io/development",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
